# sola-wallet-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  pyvenv.cfg  requirements.txt  rustfmt.toml
Scripts/: activate  activate.bat
app/: main.py
app/data/: token_data.py
app/routes/: create_wallet.py  fund_wallet.py  health.py  transfer.py  tx_status.py
app/utils/: prepare_transaction.py
src/: main.rs
src/instructions/: config.rs  jupiter_instructions.rs  lulo_instructions.rs  mod.rs
src/routes/: jupiter.rs  lulo.rs  mod.rs  router.rs  swap.rs
