[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.0"
bincode = "1.3.3"
chttp = "0.5.5"
dotenv = "0.15.0"
eyre = "0.6.12"
jupiter-swap-api-client = "0.1.0"
serde = "1.0.217"
serde_json = "1.0.134"
solana-sdk = "1.17"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

